fixed button padding to align center

--- a/src/render/index.css
+++ b/src/render/index.css
@@ -41,7 +41,7 @@ header {
 }
 
 #show-modal {
-  padding: 0px 12px 5px;
+  padding: 0px 12px;
   margin-right: 10px;
   font-size: 30px;
 }
